live/apps/mlflow/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: apps
  labels:
    app: mlflow
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: mlflow
